fix teachtable delete
