# api/routes/swagger.json
@@ -392,7 +392,7 @@
                 "$ref" : "#/definitions/Model18"
               },
               "x-examples" : {
-                "application/json" : "{\n    \"subject_id\":\"01006012\",  \n    \"subject_section\":\"5\",\n    \"curr2_section\":\"1\",\n    \"teach_time\":\"'08:00:00'\",\n    \"semester\":\"1\",\n    \"year\":\"2020\"\n   }"
+                "application/json" : "{\n   \"semester\":\"1\",\n    \"year\":\"2020\"\n   }"
               }
             } ],
             "responses" : {
@@ -717,18 +717,7 @@
       },
       "Model18" : {
         "properties" : {
-          "subject_id" : {
-            "type" : "string"
-          },
-          "subject_section" : {
-            "type" : "string"
-          },
-          "curr2_section" : {
-            "type" : "string"
-          },
-          "teach_time" : {
-            "type" : "string"
-          },
+         
           "semester" : {
             "type" : "string"
           },
